@@ -4,12 +4,12 @@ package de.tototec.sbuild
  * Translates some kind of path into a local path suitable as a virtual target name.
  * If SBuild decides, that the virtual target needs to be executed (is not up-to-date),
  * (@link #resolve(String)} will be called.
- * 
+ *
  */
 trait SchemeHandler {
-  // shold return something starting with "file:" or "phony:"
+  // should return something starting with "file:" or "phony:"
   def localPath(path: String): String
-  def resolve(path: String): ResolveResult
+  def resolve(path: String, targetContext: TargetContext)
 }
 
 /**
@@ -18,4 +18,8 @@ trait SchemeHandler {
 object SchemeHandler {
   def apply(scheme: String, handler: SchemeHandler)(implicit project: Project) =
     project.registerSchemeHandler(scheme, handler)
+}
+
+trait SchemeHandlerWithDependencies extends SchemeHandler {
+  def dependsOn(path: String): TargetRefs
 }
